website tidy, data science focus on about

--- a/_projects/2019-12-01-eis-rf.md
+++ b/_projects/2019-12-01-eis-rf.md
@@ -6,11 +6,5 @@ summary:
 category: Job
 ---
 
-Development in house Python packages for quantitative modelling and data analysis.
-
-Documentation written in rST and md and converted to html and pdf using Sphinx.
-
-Tests written in Pytest.
-
-Dashboard development as interface to quantitative models.
+I support Team GB with quantitative data analysis and training tool hardware and software development. I have developed in house Python packages for data analysis and presentation. I have written documentation using Sphinx and in technical reports. I have deployed web based dashboard which communicates research directly to the sports.
 
