new cv, rewritten various about pages

--- a/_projects/2019-12-01-eis-rf.md
+++ b/_projects/2019-12-01-eis-rf.md
@@ -1,7 +1,7 @@
 ---
 layout: project
-title: English Institute of Sport Senior Research Assistant
-description: Supporting the Performance Sport Laboratory with quantitative analysis and data science
+title: English Institute of Sport Research Fellow
+description: Developing data driven solutions to support Team GB athlete training and performance.
 summary: 
 category: Job
 ---
