--- a/_projects/2019-12-01-eis-rf.md
+++ b/_projects/2019-12-01-eis-rf.md
@@ -6,5 +6,5 @@ summary:
 category: Job
 ---
 
-I support Team GB with quantitative data analysis and training tool hardware and software development. I have developed in house Python packages for data analysis and presentation. I have written documentation using Sphinx and in technical reports. I have deployed web based dashboard which communicates research directly to the sports.
+I support Team GB with quantitative data analysis and training tool hardware and software development. I have developed in house Python packages for data analysis and presentation. I have written documentation using Sphinx and in technical reports. I have deployed scientific models within fully fledged web apps.
 
