update to site post display

--- a/_projects/2019-12-01-eis-rf.md
+++ b/_projects/2019-12-01-eis-rf.md
@@ -1,7 +1,7 @@
 ---
 layout: project
 title: English Institute of Sport Research Fellow
-description: Developing data driven solutions to support Team GB athlete training and performance.
+description: Supporting Team GB through developing data driven applications and performing experimental investigations.
 summary: 
 category: Job
 ---
